--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: "Poppins", sans-serif;
+	box-sizing: border-box;
+	font-family: sans-serif;
+	color: darkblue;
 }
 
 body {
@@ -15,6 +17,108 @@ body {
 	background: #000;
 	overflow: hidden;
 }
+
+/*----------------*/
+.container {
+	width: 50%;
+  height: 60vh;
+  position: absolute;
+  top: 35%;
+}
+.optionsBox{
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  border-radius: .5rem;
+  border: .2rem solid #03a9f4;
+  box-shadow: 0rem 0rem 6rem #03a9f4, 0 0 0 0.3rem rgba(0, 0, 0, 0.3);
+  
+  position: relative;
+  overflow: hidden;
+}
+
+.options{
+	list-style: none; /* Remove default list bullets */
+    padding: 0; /* Remove default padding */
+}
+
+.options li{
+	margin-top: .1rem;
+	margin-left: .05rem;
+	margin-right: .05rem;
+}
+
+.options li button {
+	width: 100%;
+
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+	
+	background-color: rgba(5, 0, 24, 0.959);
+    border: .1rem solid #1434A4; /* Add a border to create the box */
+	border-radius: .5rem;
+	padding: .7rem; /* Add padding to space the text from the box's edges */
+
+	/*centering the text*/
+    display: flex;
+    justify-content: center;
+	margin-bottom: .4rem;
+
+	font-size: 1.5rem;
+	font-weight: 600;
+	color: rgb(0, 0, 205);
+
+	transition: transform 0.5s ease;
+}
+.options li button:hover{
+	transform: scale(1.1);
+	padding-top: 1.4rem;
+	padding-bottom: 1.4rem;
+}
+.optionsBox:hover{
+	overflow: visible;
+}
+.optionsBox::-webkit-scrollbar {
+	display: none;
+}
+/*---------------------*/
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+	
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
+
+/*-----------------------*/
 
 .content {
 	position: absolute;
@@ -76,6 +180,8 @@ body {
 	font-size: small;
 	font-weight: 900;
 	text-decoration: none;
+
+	margin-right: 5em;
 
 	--c: linear-gradient(darkblue 0 0);
 	/* update the color here */
@@ -207,3 +313,5 @@ body {
 		transform: rotate(0deg);
 	}
 }
+
+
