--- a/rsc/css/cards.css
+++ b/rsc/css/cards.css
@@ -5,3 +5,24 @@
 	font-family: sans-serif;
 	/*color: darkblue;*/
 }
+
+.cards-container {
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; /* Center horizontally */
+    height: 100vh;
+}
+
+.cards{
+	width: 55%;
+}
+
+.cards li {
+	display: inline;
+	margin-left: .2%;
+}
+
+.cards li img{
+	width: 19%;
+}
